crates/ink/tests/ui/contract/fail/constructor-payable-invalid-1.stderr
error: encountered unknown ink! attribute argument: payable
 --> tests/ui/contract/fail/constructor-payable-invalid-1.rs:7:28
  |
7 |         #[ink(constructor, payable = true)]
  |                            ^^^^^^^
